# icecream.base

./: .clang-format  .clang-format-include  .gitattributes  .gitignore  meson.build  readme.adoc
code/: args.cc  args.h  config.cc  config.h  log.cc  log.h  main.cc  main.h  utils.cc  utils.h
data/: config.toml
subprojects/: packagecache  packagefiles  spdlog.wrap  tabulate.wrap
test/: meson.build  test_log.cc  test_toml.cc  test_wraps.cc
tool/: deps_install.sh  run_container.sh
